--- a/src/main/resources/fxml/mainAppFXML.fxml
+++ b/src/main/resources/fxml/mainAppFXML.fxml
@@ -23,7 +23,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<BorderPane prefHeight="526.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="669.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="26.0" prefWidth="862.0" BorderPane.alignment="CENTER">
          <children>
@@ -43,7 +43,7 @@
                   </Menu>
                   <Menu mnemonicParsing="false" text="Edit">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="Preferences" />
+                        <MenuItem fx:id="prefItm" mnemonicParsing="false" text="Preferences" />
                      </items>
                   </Menu>
                   <Menu mnemonicParsing="false" text="Help">
@@ -58,7 +58,7 @@
       </VBox>
    </top>
    <left>
-      <VBox prefHeight="200.0" prefWidth="150.0" spacing="10.0" style="-fx-alignment: top-center;" BorderPane.alignment="CENTER">
+      <VBox prefHeight="634.0" prefWidth="153.0" spacing="10.0" style="-fx-alignment: top-center;" BorderPane.alignment="CENTER">
          <padding>
             <Insets top="10.0" />
          </padding>
@@ -80,23 +80,15 @@
                   <Insets top="-10.0" />
                </VBox.margin>
             </Label>
-            <Label fx:id="amplitudeLbl" text="Amplitude" />
-            <Slider fx:id="amplitudeSldr" blockIncrement="1.0" majorTickUnit="3.0" max="10.0" min="1.0" minorTickCount="2" prefHeight="38.0" prefWidth="98.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin></Slider>
             <Accordion>
                <panes>
                   <TitledPane animated="false" text="Simple Ripple">
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ScrollPane prefHeight="88.0" prefWidth="153.0">
+                              <ScrollPane prefHeight="169.0" prefWidth="154.0">
                                  <content>
-                                    <VBox alignment="TOP_CENTER" prefHeight="181.0" prefWidth="135.0" style="-fx-alignment: top-center;">
+                                    <VBox alignment="TOP_CENTER" prefHeight="207.0" prefWidth="135.0" style="-fx-alignment: top-center;">
                                        <children>
                                           <Label text="Dynamic Damping" />
                                           <Slider fx:id="sldrDamping" blockIncrement="0.001" majorTickUnit="0.1" max="0.15" min="0.001" showTickLabels="true" showTickMarks="true" value="0.02">
@@ -115,6 +107,15 @@
                                              </VBox.margin>
                                           </Label>
                                           <TextField fx:id="txtBoxRippleLimit" text="max" />
+                                          <Label fx:id="amplitudeLbl" text="Amplitude" />
+                                          <Slider fx:id="amplitudeSldr" blockIncrement="1.0" majorTickUnit="3.0" max="10.0" min="1.0" minorTickCount="2" prefHeight="38.0" prefWidth="98.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0">
+                                             <opaqueInsets>
+                                                <Insets />
+                                             </opaqueInsets>
+                                             <VBox.margin>
+                                                <Insets left="10.0" right="10.0" />
+                                             </VBox.margin>
+                                          </Slider>
                                        </children>
                                        <padding>
                                           <Insets top="10.0" />
@@ -251,22 +252,25 @@
             </Tab>
             <Tab text="View Render">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <AnchorPane fx:id="viewRenderAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <VBox fx:id="SimVBox1" prefHeight="472.0" prefWidth="548.0">
+                        <VBox fx:id="SimVBox1" prefHeight="472.0" prefWidth="548.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
                               <AnchorPane>
                                  <children>
                                     <ImageView fx:id="imageViewSequence" fitHeight="386.0" fitWidth="548.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                  </children>
                               </AnchorPane>
-                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0">
+                              <HBox alignment="CENTER" prefHeight="202.0" prefWidth="548.0" spacing="30.0">
                                  <children>
                                     <Button fx:id="btnPlayRender" mnemonicParsing="false" text="Play" />
                                     <Button fx:id="btnPauseRender" mnemonicParsing="false" text="Pause" />
                                     <Button fx:id="btnResetRender" mnemonicParsing="false" text="Reset" />
                                     <Button fx:id="btnLoad" mnemonicParsing="false" text="Load" />
                                  </children>
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
                               </HBox>
                            </children>
                         </VBox>
